# fishmlserv

./: Dockerfile  README.md  pyproject.toml  r.txt  requirements.txt
LB/: Dockerfile
note/: fish.py  fishml.ipynb  model.pkl  ss.ipynb
src/fishmlserv/: curl.py  main.py
src/fishmlserv/model/: manager.py  prediction.py
tests/: test_curl.py  test_pred.py
