[project]
name = "fishmlserv"
version = "0.8.0"
description = "Creating a ML model -usingsklartn(KNeighborsClassifier"
authors = [
    {name = "S00zzang", email = "sujinpark8719561@gmail.com"},
]
dependencies = [

]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
get-model-path = "fishmlserv.model.manager:get_model_path"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
    "matplotlib>=3.9.2"
]
